# Grammar

./: all_nodes.py  latabla.csv  main.py  mylexer.py  prueba.txt  pyproject.toml  runner.py  syntax_table.csv  tablasuper.csv
doctest-output/: grafico.gv  graficoEsteSi.gv  graficoFinal.gv  graficoGRAMAR.gv  graficoInicial.gv
